# crusty_py

./: .gitignore  README.md  pyproject.toml
docs/: decide.md  deployment.md  design.md  development.md  installation.md  problems.md  running.md
lib/: apparatus.py  bind.py  communicate.py  components.py  compose.py  connect.py  contact.py  control.py  decide.py  decrypt.py  device.py  dispatch.py  engine.py  errata.py  house_light.py  house_light_pb2.py  inform.py  interact.py  manipulate.py  process.py  relay.py  request.py  sound_alsa.py  stepper_motor.py  stepper_motor_pb2.py  utils.py
lib/component_protos/: decide.py  peckboard.py  peckboard_pb2.py  sound_alsa_pb2.py  stepper_motor.py  stepper_motor_pb2.py
lib/generator_hex/: decide_pb2.py  house_light_pb2.py  peckboard_pb2.py  sound_alsa_pb2.py  sound_alsa_pb2.pyi  stepper_motor_pb2.py  stepper_motor_pb2.pyi
proto_class/protos/: decide_pb2.pyi  house_light_pb2.pyi  peckboard_pb2.pyi  sound_alsa_pb2.pyi
protos/: decide_pb2.py  house_light.proto  house_light_pb2.py  sound_alsa.proto  sound_alsa_pb2.py  stepper_motor.proto  stepper_motor_pb2.py  stepper_motor_pb2.pyi
scripts/: gng.py  interrupt_gng.py  interrupt_shape.py  lights.py  shape.py  test.py
scripts/lib/: config.py  dispatch.py  errata.py  inform.py  logging.py  process.py  report.py
scripts/lib/generator_hex/: decide_pb2.py  decide_pb2.pyi  house_light_pb2.py  house_light_pb2.pyi  peckboard_pb2.py  peckboard_pb2.pyi  sound_alsa_pb2.py  (+3 more)
test/: correspondence.py  gng_playback.json  interrupt_playback.json  jukebox.py  subscription.py  yielder.py
